@@ -28,3 +28,8 @@ buildroot-0.1.4 2009-04-19 <spudmonkey@racsa.co.cr>
 	* Removed logic to build the target GCC.  That is never used.
 
 buildroot-0.1.5 2009-xx-xx <spudmonkey@racsa.co.cr>
+
+	* Replaced config/arm-defconfig-4.2.4 with config/arm920t-defconfig-4.2.4
+	  and config/arm926t-defconfig-4.2.4 because of differences in the
+	  way that soft floating point is handled between these two
+	  architectures.
